Cleaning NotificationProperties by moving it into EmailService. Clean up the two referral controllers to interact just with their new ReferralService. Make everywhere not access EmaiLService private value fields Move CreateReferralService.java to ReferralService.java